<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:gravity="center"
                  android:orientation="vertical"
                  android:background="@color/white"
                  android:id="@+id/RootViewBicep">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/bicepcurltext"/>

        <ImageView
            android:layout_width="300dp"
            android:layout_height="200dp"
            android:src="@drawable/bicepcurl_image"
            />
        <ImageView
            android:layout_width="777dp"
            android:layout_height="18dp"
            android:src="@drawable/line"/>
        <ImageView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:src="@drawable/muscle_biceps_text"/>
        <ImageView
            android:layout_width="150dp"
            android:layout_height="180dp"
            android:src="@drawable/bicep_muscle"
            android:layout_gravity="center_horizontal"/>
        <ImageView
            android:layout_width="777dp"
            android:layout_height="18dp"
            android:src="@drawable/line"/>
        <ImageView
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:src="@drawable/instructions_text"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/one"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bicep_instruction_one"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/two"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bicep_instruction_two"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/three"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bicep_instruction_three"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/four"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bicep_instruction_four"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/five"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bicep_instruction_five"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/six"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bicep_instruction_six"
                android:paddingBottom="20dp"/>

        </LinearLayout>
        <ImageView
            android:layout_width="777dp"
            android:layout_height="18dp"
            android:src="@drawable/line"/>

        <ImageView
            android:id="@+id/last_weight_bicep_title"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:src="@drawable/last_time"/>
        <TextView
            android:id="@+id/last_weight_bicep"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:fontFamily="sans-serif-light"
            android:paddingBottom="10dp"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/tracking_button"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:background="@color/white"
            android:src="@drawable/track_with_band_button"/>
        <ImageButton
            android:id="@+id/tracking_button_noband"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:background="@color/white"
            android:src="@drawable/track_without_band_button"/>

        </LinearLayout>
    </LinearLayout>

</ScrollView>
<ListView
android:id="@+id/navList_bicep"
android:layout_width="200dp"
android:layout_height="match_parent"
android:layout_gravity="left|start"
android:background="#ffeeeeee"/>
    </android.support.v4.widget.DrawerLayout>
